2005-11-10 Daniel Perez <daniel@gforgegroup.com>
	Forum : Fixing bugs in display / emails
	Admin : added plugin manager -> to enable/disable in a site wide fashion the plugins

2005-11-10 Daniel Perez <daniel@gforgegroup.com>
	Fckeditor : changed configuration
				upgraded to 2.1.1 version to fix "spaces error" in Firefox
	
2005-11-10  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml: 
	Checking out and updating from Branch_4_5.
	Customizing front page.
	FTI and project webs moved to optional features.
	Removed the fix for CVSTracker schema.
	Q&A about <Files> and <Location>, by David Morsberger.
	Added recommendation that reporting tables are initialized early.
	Instructions for patching when CVS version is 1.12.

2005-11-09 Daniel Perez <daniel@gforgegroup.com>
	Tracker (fixed bug)
		[#1630] -> http://gforge.org/tracker/?func=detail&atid=222&aid=1630&group_id=6	
		
2005-11-08 Daniel Perez <daniel@gforgegroup.com>
	Forums : 
		Added more common htmlentities to convertExtendedCharsForEmail method

2005-11-07 Daniel Perez <daniel@gforgegroup.com>
	Forums : 
		Attachmanager : Added more descriptive error messages
		Display : Fixed extra line break always displaying
		Fixed bug when creating forum with default email address

2005-11-04 Daniel Perez <daniel@gforgegroup.com>
	Patchs applied
		[#1546] -> http://gforge.org/tracker/?func=detail&aid=1546&group_id=1&atid=106
		[#1567] -> http://gforge.org/tracker/?func=detail&aid=1567&group_id=1&atid=106
		[#1609] -> http://gforge.org/tracker/?func=detail&aid=1609&group_id=1&atid=106
	Forums : added mail support when attachment is added
			changed some special html chars to show up when sending notice via email

2005-11-03 Daniel Perez <daniel@gforgegroup.com>
	Patchs applied
		[#1322] -> http://gforge.org/tracker/?func=detail&aid=1322&group_id=1&atid=106
		[#1396] -> http://gforge.org/tracker/?func=detail&aid=1396&group_id=1&atid=106